# audio-stego-lab

./: PROJECT_SUMMARY.md  README.md  pyproject.toml
docs/: USAGE.md  visual_report.html
examples/: demo.py
src/audio_stego_lab/: __init__.py  core.py  recipe_bank.py
tests/: test_smoke.py
